--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.modal {
+/* .modal {
     top: 60px !important;
 }
 
@@ -13,4 +13,105 @@
 .card-task {
     width: 600px;
     height: 220px;
+} */
+
+body {
+    background-image: url("../imgs/background.jpg");
+}
+
+.card-list {
+    margin-bottom: 0.75rem;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    background: #dee2e6;
+}
+
+.card-list .card-list-head {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-list .card {
+    border: none;
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #dee2e6;
+    border-radius: 0.5rem;
+    margin-bottom: 0.75rem;
+    box-shadow: 0 0.1875rem 0.375rem rgb(33 37 41 / 5%);
+}
+
+.progress {
+    display: flex;
+    height: 0.375rem;
+    overflow: hidden;
+    line-height: 0;
+    font-size: 0.75rem;
+    background-color: #dee2e6;
+    border-radius: 20rem;
+}
+
+.card > .progress {
+    height: 0.1875rem;
+    background: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1.5rem;
+}
+
+.card-task .card-body {
+    padding: 1.25rem;
+}
+
+.card-title {
+    margin-bottom: 1.5rem;
+}
+
+.card .card-title {
+    max-width: 90%;
+}
+
+a {
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+.text-small {
+    font-size: .875rem;
+    line-height: 1.3125rem;
+}
+
+.card-body .card-options {
+    position: absolute;
+    top: 1.5rem;
+    right: 0.75rem;
+}
+
+.btn-check:focus+.btn, .btn:focus {
+    box-shadow: none;
+}
+
+.font-11 {
+    font-size: 11px;
+}
+
+.dropdown-menu li > a:focus, .dropdown-submenu:hover > a {
+    background-color: #fff;
 }
